# Audio-Sender-Setup-for-Two-PC

./: Cargo.toml
src/: config.rs  protocol.rs
src/audio/: buffer.rs  level_meter.rs  mod.rs  playback.rs
src/network/: discovery.rs  handshake.rs  mod.rs  receiver.rs  sender.rs  udp.rs
src/tracks/: manager.rs  mod.rs  track.rs
src/ui/: server.rs  websocket.rs
static/: index.html
